updating the website documentation for submit button loading animation behaviour

--- a/website/docs/docs/messages/messages.mdx
+++ b/website/docs/docs/messages/messages.mdx
@@ -416,8 +416,7 @@ This object is used to configure names that are displayed beside messages. <br /
 
 - Type: `boolean`
 
-Toggle whether the loading bubble should be displayed when waiting for a message response. If set to _false_ - the [submit button](/docs/styles/#submitButtonStyles)
-will automatically have a loading animation.
+Toggle whether the loading bubble should be displayed when waiting for a message response.
 
 #### Example
 
